<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title_textTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <LinearLayout
        android:id="@+id/input_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textTV"
        app:layout_constraintVertical_bias="0.2">

        <EditText
            android:id="@+id/first_timeET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/edittext_border"
            android:layout_weight="1"
            android:hint="@string/time_text_1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/second_timeET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/edittext_border"
            android:layout_weight="1"
            android:hint="@string/time_text_2"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/choose_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_pad"
        app:layout_constraintVertical_bias="0.1">

        <Button
            android:id="@+id/plusBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:backgroundTint="@color/blue"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/minusBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus"
            android:backgroundTint="@color/blue"
            android:textSize="18sp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </LinearLayout>


    <TextView
        android:id="@+id/result_textTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_result"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColorHint="@color/red"
        android:background="@drawable/text_view_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_operation"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/reset_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_textTV"
        app:layout_constraintVertical_bias="0.15">

        <Button
            android:id="@+id/resetBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:backgroundTint="@color/blue"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/exitBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit"
            android:backgroundTint="@color/blue"
            android:textSize="18sp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>